--- a/project3.html
+++ b/project3.html
@@ -1,18 +1,114 @@
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <html>
 
 <head>
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
 <style>
+@media screen and (min-width:576px) {
+body {
+	width: 100%;
+}
 * {
 margin:0;
 padding: 0;
 box-sizing: border-box;
+font-size: 36px;
 }
+
+label {
+	width:  35%;
+	display:  inline-block;
+	margin:  10px 0;
+	padding-left: 10px;
+}
+input {
+	width:  45%;
+	border-radius: 5px;
+	border:  1px solid #888;
+}
+legend {
+	font-weight: bold;
+	color:  #56b;
+}
+input:focus {
+	background: #cdf;
+}
+
+body > button, form [type=submit] {
+	margin: 30px 0;
+	background: #9ad;
+	border: 1px solid #459;
+	padding: 10px;
+}
+
+form * {
+	font-size: 48px;
+}
+
+table {
+	background:  #abf;
+	border-spacing: 5px;
+	width:  100%;
+}
+table * {
+	background:  #cdf;
+	width: auto;
+	text-align:  center;
+} 
+
+
+.red * {
+font-weight: bold;
+color: hsla(360, 100%, 50%);
+}
+
+.popup-wrapper::after {
+	position: absolute;
+	top: 0;
+	left: 0;
+	background: #333;
+	opacity: 0.5;
+	width: 100%;
+	height: 100%;
+	content: "";
+	z-index: 9;
+}
+.popup-box {
+	position: absolute;
+	background: #eef;
+	width: 70%;
+	height: 180px;
+	text-align: center;
+	z-index: 9900;
+	top: 50%;
+	left: 50%;
+	transform: translate(-50%,-50%);
+	border:  1px solid #447;
+	border-radius: 20px;
+}
+.popup-box div {
+	font: normal 36px "Helvetica";
+	color: #336;
+	padding: 20px ;
+}
+
+.popup-box button {
+	width:  200px;
+	padding: 10px;
+	position: absolute;
+	bottom: 10px;
+	transform: translate(-50%,0);
+}
+}
+@media screen and (min-width: 998px) {
+* {
+	font-size: 16px;
+}
+
 body {
 text-align: center;
 }
-form {
+form * {
 font: normal 18px "Helvetica";
 color: #333;
 margin-bottom: 10px;
@@ -37,18 +133,18 @@ font: bold 32px "Helvetica";
 form label, form input {
 margin: 2px 0;
 }
+
+form input[type=submit] {
+width:200px
+}
 table {
 width: 100%;
 }
 
 table * {
-border: 1px solid black;
-margin: 1px;
 }
 
-.red * {
-font-weight: bold;
-color: hsla(360, 100%, 50%);
+
 }
 </style>
 </head>
@@ -75,7 +171,7 @@ color: hsla(360, 100%, 50%);
 				
 			</div>
 			<!-- nhấn xác nhận -->
-			<input type="submit" id="s-1" value="Nhập">
+			<input type="submit" id="s-1" value="Nhập" />
 	</fieldset>
 </form>
 
@@ -163,7 +259,7 @@ $(document).ready(()=> {
 	
 	function trungbinh() {
 		if ($("tbody").children().length==0) {
-			alert("Hiện không có học sinh trong bảng");
+			popup("Hiện không có học sinh trong bảng tính");
 			return false;
 			}
 		//Với mỗi hàng trong bảng điểm thì ta làm như sau:
@@ -185,16 +281,31 @@ $(document).ready(()=> {
 		flag=1;
 		$("tbody").children().each((index,elem)=>{
 			tbinh=$($(elem).children()[5]).text();
-			(tbinh=="?") ? (alert("Vui lòng tính điểm Trung bình" +
+			(tbinh=="?") ? (popup("Vui lòng tính điểm Trung bình" +
 			" trước cho số thứ tự " + $($(elem).children()[0], flag=0).text())) :
 			(tbinh>=8.0) ? ($(elem).addClass("red"), flag=0) : ("");
 		});
 		if ($("tbody").children().length==0) {
-			alert("Hiện không có học sinh trong bảng");
+			popup("Hiện không có học sinh trong bảng");
 		} else if (flag==1) {
-			alert("Hiện không có học sinh giỏi!!");
+			popup("Hiện không có học sinh giỏi!!");
 			};
 	};
+
+	var popup = function (msg) {
+		html="<div class='popup-wrapper'>"
+		html+="<div class='popup-box'><div>"
+		html+=msg
+		html+="</div><button>OK</button></div></div>"
+		$(html).appendTo("body");
+		$(".popup-wrapper button").click(function() {
+			$(this).parents(".popup-wrapper").remove();
+		})
+		
+		};
+	
+
+	
 });
 </script>
 </html>
